# fantastic-enigma

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
archive/: L3_Federated_LLM_Fine-tuning.ipynb
config/: federated_llama.yml  federated_small.yml
notebooks/: init.ipynb  llama32_1b_fed_finetuning.ipynb  pythia_70m_fed_finetuning.ipynb  simulation.ipynb
