[project]
name = "fantastic-enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.18.0",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "llama-index>=0.12.37",
    "llama-index-llms-ollama>=0.5.6",
    "matplotlib>=3.10.3",
    "omegaconf>=2.3.0",
    "peft>=0.15.2",
    "scikit-learn>=1.6.1",
    "transformers>=4.52.3",
    "trl>=0.18.0",
    "unsloth>=2024.8",
    "pandas>=2.2.3",
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "datasets>=3.1.0",
]
